# optimal-cube

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
src/: build_db_main.cpp  cube.cpp  cube.h  fast_solver.cpp  fast_solver.h  heuristic.cpp  heuristic.h  main.cpp  moves.cpp  moves.h  pattern_db.cpp  pattern_db.h  solver.cpp  solver.h  utils.cpp  utils.h
tests/: benchmark.cpp  test_fast_solver.cpp  test_moves.cpp  test_pattern_db.cpp  test_solver.cpp
